--- a/css/styles.css
+++ b/css/styles.css
@@ -1457,15 +1457,79 @@ text-transform: capitalize;
     gap: 0px;
 }
 .footer{
- 
+ display: inline-block;
+}
+.footerdiv{
+   display:block;
+   max-width: 428px;
 }
 .div-footer{
-   
+    margin: 0;
+}
+.footer-p{
+    margin:0 auto;
+    display:flex;
+    justify-content: center;
+
+}
+.logo-linkthree, logo-linkfour{
+    display:flex;
+    justify-content: center;
 }
 .social-media{
+    display:flex;
+    justify-content: center;
+    margin-top: 72px;
+}
+.ul-socialf{
+    display:flex;
+    justify-content: center;
+}
+.p-form{
+    margin: 0;
+    display:flex;
+    justify-content: center;
+    margin-top: 72px;
+
+}
+.button-form{
+    display:flex;
+    justify-content: center;
+    margin: 0 auto;
+   
+}
+.foot-form{
+    margin:0;
+    display:block;
+}
+.foot-input{
+    border: 1px solid #FFFFFF;
+filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+border-radius: 4px;
+margin-bottom: 16px;
+opacity: 0.3;
+}
+.foot-input::placeholder{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 24px;
+    /* identical to box height, or 200% */
+    
+    display: flex;
+    align-items: center;
+    color: #FFFFFF;
+    letter-spacing: 0.04em;
+    opacity: 0.6;
+}
+
+.button-linkp{
+    
+border-radius: 4px;
+padding: 8px 16px;
+
+
     
 }
-.li-social{
-    
 }
- }
