--- a/css/styles.css
+++ b/css/styles.css
@@ -1526,8 +1526,8 @@ width:100%;
 }
 
 .menu-toggle {
-    min-height: 40px;
-    min-width: 40px;
+    min-height: 24px;
+    min-width: 24px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -1644,6 +1644,7 @@ list-style: none;
  }
 .blue{
     color: #4D5AE5;
+    
 }
 .grey{
     color: #434455;
@@ -1902,7 +1903,7 @@ color: #434455;
     display: flex;
 }
 .footerdiv{
-    max-width: 768px;
+    
     display: flex;
     flex-wrap: wrap;
   
@@ -2015,7 +2016,7 @@ color: #434455;
     margin: 0 auto;
 }
 }
-@media only screen and (max-width: 320px){
+@media only screen and (max-width: 427px){
     .container {
         max-width: 320px;
     }
@@ -2127,6 +2128,7 @@ margin-left: 53.2px;
     margin-bottom: 72px;
     margin-left: 13px;
 }
+
 .li-sectionfive{
     width: 190px;
     gap: 0px;
@@ -2201,8 +2203,8 @@ width: 100%;
 }
 
 .menu-toggle {
-    min-height: 40px;
-    min-width: 40px;
+    min-height: 24px;
+    min-width: 24px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -2403,7 +2405,7 @@ flex-direction: column;
   justify-content: flex-start;
   display: flex;
   flex-direction: row;
-  gap: 56px;
+  gap: 30px;
   
   
   
@@ -2444,3 +2446,109 @@ text-transform: capitalize;
 color: #2E2F42;
 }
 }
+@media screen and (min-width: 1158px){
+    
+     .container{
+        
+            max-width: 1158px;
+       
+     }
+     
+     .sectionone-h{
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 56px;
+        line-height: 60px;
+        /* or 107% */
+        
+        text-align: center;
+        letter-spacing: 0.02em;
+
+    font-size: none;
+    line-height: none;
+    max-width: 496px;
+
+
+     }
+     .ul-adresa{
+        flex-direction: row;
+     margin: 0;
+       gap: 40px;
+       padding-top: 24px;
+       padding-bottom: 24px;
+     }
+     .li-headeradress{
+        
+     }
+     .gmail{
+        
+        font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 24px;
+/* identical to box height, or 150% */
+
+letter-spacing: 0.02em;
+
+/* SLATE */
+
+color: #434455; 
+     }
+     .ul-sectiontwo{
+        flex-wrap: nowrap;
+     }
+     .rectangle{
+        display: flex;
+     }
+     .sectiontwo-h{
+        width: 264px;
+        
+        font-family: 'Roboto';
+font-style: normal;
+font-weight: 500;
+font-size: 20px;
+line-height: 24px;
+/* identical to box height, or 120% */
+
+letter-spacing: 0.02em;
+
+/* NAVY BLUE */
+
+color: #2E2F42;
+     }
+     .sectiontwo-p{
+        font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 24px;
+/* or 150% */
+
+letter-spacing: 0.02em;
+
+/* SLATE */
+
+color: #434455;
+
+     }
+     .sectionthree{
+        display: flex;
+       
+     }
+     .sectionfour-ul{
+        flex-wrap: nowrap;
+        margin-left: 0;
+     }
+     .ul-sectionfive{
+        flex-wrap: nowrap;
+        max-width: 1158px;
+     }
+     .footer-div{
+        display: flex;
+     }
+     .foot-form{
+        display: block;
+     }
+    }
