--- a/css/styles.css
+++ b/css/styles.css
@@ -1834,8 +1834,22 @@ letter-spacing: 0.04em;
 color: #434455;
     }
     
-.sectione-h{
+.sectionone-h{
     max-width: 768px;
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 56px;
+max-width: 496px;
+line-height: 60px;
+/* or 107% */
+
+text-align: center;
+letter-spacing: 0.02em;
+
+/* WHITE */
+
+color: #FFFFFF;
 }
 .sectionthree{
     display:none;
